Issue #1 resolved issue in broswer  'download font: kern Too large subtable' by adding generated font by Font Squirrel

--- a/sass/_fonts.scss
+++ b/sass/_fonts.scss
@@ -1,14 +1,35 @@
+/*! Generated by Font Squirrel (https://www.fontsquirrel.com) on February 14, 2020 */
+
 @font-face {
-  font-family: openSans;
-  src: url(../../assets/fonts/OpenSans-Light.ttf);
+  font-family: "open_sansbold";
+  src: url("../../assets/fonts/opensans-light-webfont.woff") format("woff2"),
+    url("../assets/fonts/opensans-bold-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
 }
+
 @font-face {
-  font-family: openSans;
-  src: url(../../assets/fonts/OpenSans-LightItalic.ttf);
-  font-style: italic;
+  font-family: "open_sansbold_italic";
+  src: url("../../assets/fonts/opensans-bolditalic-webfont.woff2")
+      format("woff2"),
+    url("../../assets/fonts/opensans-bolditalic-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
 }
+
 @font-face {
-  font-family: openSans;
-  src: url(../../assets/fonts/OpenSans-Bold.ttf);
-  font-weight: bold;
+  font-family: "open_sanslight";
+  src: url("../../assets/fonts/opensans-light-webfont.woff2") format("woff2"),
+    url("../../assets/fonts/opensans-light-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "open_sanslight_italic";
+  src: url("../../assets/fonts/opensans-lightitalic-webfont.woff2")
+      format("woff2"),
+    url("../../assets/fonts/opensans-lightitalic-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
 }
