--- a/sass/style.scss
+++ b/sass/style.scss
@@ -14,7 +14,7 @@ h1,
 h2,
 h3 {
   color: $abstract-color;
-  font-family: openSans, sans-serif;
+  font-family: open_sanslight, Arial, Helvetica, sans-serif;
   font-size: $font-size;
   line-height: 1rem;
 }
